# magx

./: .gitignore  10sensor2023-08-01-13-03-25.csv  10sensor2023-08-01-13-03-32.csv  10sensor2023-08-01-13-03-41.csv  10sensor2023-08-01-13-03-50.csv  10sensor2023-08-01-13-04-00.csv  10sensor2023-08-01-13-04-11.csv  10sensor2023-08-01-13-04-20.csv  10sensor2023-08-01-13-04-31.csv  10sensor2023-08-01-13-05-25.csv  10sensor2023-08-01-13-05-34.csv  10sensor2023-08-01-13-05-45.csv  10sensor2023-08-01-13-05-53.csv  10sensor2023-08-01-13-06-08.csv  10sensor2023-08-01-13-06-16.csv  10sensor2023-08-01-13-06-44.csv  10sensor2023-08-01-13-06-52.csv  10sensor2023-08-01-13-07-01.csv  10sensor2023-08-01-13-07-09.csv  10sensor2023-08-01-13-07-18.csv  10sensor2023-08-01-13-07-34.csv  10sensor2023-08-01-13-07-42.csv  10sensor2023-08-01-13-07-50.csv  LICENSE  README.md  test.ipynb
Codes/: README.md  requirements.txt
Codes/cpp_solver/: .gitignore  CMakeLists.txt  README.md  setup.py
Codes/cpp_solver/src/: cpp_solver_analytical.cpp
Codes/leap_motion/: ground_truth.py  readme.md
Codes/optimization/: __init__.py  config.py  find_best_Loc.py  readme.md  real_time_pos.py  real_time_pos_belly.py  real_time_pos_car.py  real_time_pos_face.py  real_time_pos_hand.py  simulation.py  svm.py  visualization.py  visulization.py  visulization_true.py
Codes/read_raw_ble/: README_BEFORE_SAMPLING.md  find_device.py  read_sensor.py  read_sensor_real.py  read_sensor_with_timer.py
datasets/leftcheek/: leftcheek-2023-08-02-15-56-10.csv  leftcheek-2023-08-02-15-56-21.csv  (+11 more)
pcb/: README.md
(+108 files in other folders)
